Base File - hero image fix

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       data-natural-height="1080"
       data-natural-width="1920"
       data-parallax="scroll"
-      data-image-src="../images/hd-6.jpg"
+      data-image-src="images/hd-6.jpg"
     >
       <div class="container content box-middle">
         <div class="row">
