Update landing page

--- a/index.html
+++ b/index.html
@@ -112,10 +112,11 @@
     </header>
     <div
       class="section-bg-image parallax-window box-middle-container row-20 no-bg-xs"
-      data-natural-height="1080"
-      data-natural-width="1920"
+      data-natural-height="980"
+      data-natural-width="1520"
       data-parallax="scroll"
-      data-image-src="images/hd-6.jpg"
+      data-image-src="images/pexels-andrea-piacquadio-3931640.jpg"
+      style="background-position: center; background-size: cover"
     >
       <div class="container content box-middle">
         <div class="row">
@@ -202,76 +203,7 @@
           </tbody>
         </table>
         <hr class="space" />
-        <div
-          class="flexslider carousel gallery nav-inner"
-          data-options="minWidth:150,numItems:5,itemMargin:0"
-        >
-          <ul class="slides">
-            <li>
-              <a
-                class="img-box img-scale-up lightbox grayscale row-10"
-                href="images/projects/project-1.jpg"
-                data-lightbox-anima="show-scale"
-              >
-                <img src="images/projects/project-1.jpg" alt="" />
-              </a>
-            </li>
-            <li>
-              <a
-                class="img-box img-scale-up lightbox grayscale row-10"
-                href="images/projects/project-2.jpg"
-                data-lightbox-anima="show-scale"
-              >
-                <img src="images/projects/project-2.jpg" alt="" />
-              </a>
-            </li>
-            <li>
-              <a
-                class="img-box img-scale-up lightbox grayscale row-10"
-                href="images/projects/project-3.jpg"
-                data-lightbox-anima="show-scale"
-              >
-                <img src="images/projects/project-3.jpg" alt="" />
-              </a>
-            </li>
-            <li>
-              <a
-                class="img-box img-scale-up lightbox grayscale row-10"
-                href="images/projects/project-4.jpg"
-                data-lightbox-anima="show-scale"
-              >
-                <img src="images/projects/project-4.jpg" alt="" />
-              </a>
-            </li>
-            <li>
-              <a
-                class="img-box img-scale-up lightbox grayscale row-10"
-                href="images/projects/project-5.jpg"
-                data-lightbox-anima="show-scale"
-              >
-                <img src="images/projects/project-5.jpg" alt="" />
-              </a>
-            </li>
-            <li>
-              <a
-                class="img-box img-scale-up lightbox grayscale row-10"
-                href="images/projects/project-6.jpg"
-                data-lightbox-anima="show-scale"
-              >
-                <img src="images/projects/project-6.jpg" alt="" />
-              </a>
-            </li>
-            <li>
-              <a
-                class="img-box img-scale-up lightbox grayscale row-10"
-                href="images/projects/project-7.jpg"
-                data-lightbox-anima="show-scale"
-              >
-                <img src="images/projects/project-7.jpg" alt="" />
-              </a>
-            </li>
-          </ul>
-        </div>
+
         <hr class="space" />
         <div class="row">
           <div class="col-md-6">
@@ -609,7 +541,11 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4 footer-left">
-              <img width="180" src="images/logo-bn.png" alt="" />
+              <img
+                width="120"
+                src="images/cropped-cropped-NITDA-Logo-new-03.png"
+                alt=""
+              />
               <hr class="space m" />
               <p>Collins Street West 8007, San Fransico, United States.</p>
               <hr />
