--- a/index.html
+++ b/index.html
@@ -205,39 +205,6 @@
         <hr class="space" />
 
         <hr class="space" />
-        <div class="row">
-          <div class="col-md-6">
-            <h3>About us</h3>
-            <p>
-              Est illo netus natus. Blanditiis autem, justo sagittis temporae
-              ligendi recusandae nisi similique parturient minima eligendi
-              exercitation convallis litora facilisis corrupti? Ante rhoncus
-              praesent augue. Asperiores vitae quod officiis. Cillum voluptas
-              placeat eum praesent! Nisi. Molestias mauris ac varius. Cubilia
-              potenti faucibus risus, maecenas recusandae nisi similique
-              pellentesque corrupti sagittis temporae ligendi recusandae nisi
-              similique. Tincidunt integer eu augue augue nunc elit dolor,
-              luctus placerat scelerisque euismod, iaculis eu lacus nunc mi
-              elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor,
-              metus vel.
-            </p>
-          </div>
-          <div class="col-md-6">
-            <h3>Call Center Reservation</h3>
-            <p>
-              Est illo netus natus. Blanditiis autem, justo sagittis temporae
-              ligendi recusandae nisi similique parturient minima eligendi
-              exercitation convallis litora facilisis
-            </p>
-            <hr class="space xs" />
-            <ul class="list-texts">
-              <li><b>Client:</b> Awesome Company</li>
-              <li><b>Location:</b> Mountain View CA 94043</li>
-              <li><b>Year Completed:</b> 2014</li>
-              <li><b>Value:</b> $250.000</li>
-            </ul>
-          </div>
-        </div>
       </div>
     </div>
     <div
@@ -456,10 +423,12 @@
       <div class="container content">
         <hr class="space m" />
         <div class="row" id="FAQ">
-          <div class="col-md-2">
+          <div class="col-12 text-center my-10">
             <h3>FAQ</h3>
           </div>
-          <div class="col-md-10">
+        </div>
+        <div class="row" id="FAQ">
+          <div class="col-md-12">
             <div class="row">
               <div class="col-md-6">
                 <div class="list-group accordion-list">
@@ -578,28 +547,13 @@
               </div>
             </div>
             <div class="col-md-4 footer-right text-left">
-              <div class="row">
-                <div class="col-md-6">
-                  <ul class="ul-squares">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Contacts</a></li>
-                    <li><a href="#">Future projects</a></li>
-                    <li><a href="#">Locations</a></li>
-                    <li><a href="#">Team members</a></li>
-                    <li><a href="#">Company</a></li>
-                  </ul>
-                </div>
-                <div class="col-md-6">
-                  <ul class="ul-squares">
-                    <li><a href="#">Support</a></li>
-                    <li><a href="#">Terms of services</a></li>
-                    <li><a href="#">RSS Feeds</a></li>
-                    <li><a href="#">Partnerships</a></li>
-                    <li><a href="#">RSS Feeds</a></li>
-                    <li><a href="#">Latest news</a></li>
-                  </ul>
-                </div>
-              </div>
+              <ul class="ul-squares">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Documents</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Search</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
             </div>
           </div>
         </div>
