Updated page contents and created login and registration page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="collapse navbar-collapse mt-3">
               <ul class="nav navbar-nav">
                 <li>
-                  <a href="#">Home </a>
+                  <a href="index.html">Home </a>
                 </li>
 
                 <li class="dropdown">
@@ -91,19 +91,19 @@
                 class="nav navbar-nav navbar-right"
                 style="padding: 10px; display: flex; gap: 4px"
               >
-                <button
+                <a
+                  href="./login.html"
                   style="background-color: #014e2c; color: #fff"
                   class="btn anima anima-fade-right"
-                  type="button"
                 >
                   Login
-                </button>
-                <button
+                </a>
+                <a
+                  href="./register.html"
                   class="btn btn-border anima anima-fade-right"
-                  type="button"
                 >
                   Register
-                </button>
+                </a>
               </div>
             </div>
           </div>
@@ -127,21 +127,21 @@
             data-time="1500"
           >
             <hr class="space visible-xs" />
-            <h2 class="text-light text-xl anima">
-              We don't design products but we design dreams.
-            </h2>
+            <h2 class="text-light text-xl anima">NITDA Rule Making Portal</h2>
             <hr class="space xs" />
             <p class="font-2 anima">
-              Ratione numquam. Fugiat alias saepe fuga odio sed exauris, minim
-              anim dolores earum! Veniam corporis cupidatat atque nesciunt dicta
-              justoui varius atedo pariatur senectus. Erat, consectetur
-              aspernatur voluptate perspiciatis.
+              The National Information Technology Development Agency (NITDA) of
+              Nigeria is the primary regulator to the Nigerian ICT ecosystem.
+              With increasing demands from the various stakeholders, NITDA has
+              considered improvements in how business operations are conducted.
             </p>
             <hr class="space s" />
             <div class="anima">
-              <a href="#" class="btn btn-sm">BUSINESS</a
+              <a
+                href="./The Rule Making Process Regulation of NITDA.pdf"
+                class="btn btn-sm"
+                >Download the rule making process to know more</a
               ><span class="space"></span>
-              <a href="#" class="btn btn-border btn-sm">HOME</a>
             </div>
 
             <hr class="space visible-xs" />
@@ -163,9 +163,8 @@
                   <i class="im-diploma-2 icon circle anima"></i>
                   <h3>Business consulting</h3>
                   <p>
-                    Interdum iusto pulvinar consequuntur augue optio repellat
-                    fuga Purus expedita fusce temporibus est odit mi quos semper
-                    veritatis dignissimos.
+                    Do you want to submit or review a request for the draft of a
+                    rule
                   </p>
                 </div>
               </td>
@@ -176,11 +175,10 @@
                   data-trigger="hover"
                 >
                   <i class="im-paint-brush icon circle anima"></i>
-                  <h3>Graphics and web design</h3>
+                  <h3>Policy</h3>
                   <p>
-                    Interdum iusto pulvinar consequuntur augue optio repellat
-                    fuga Purus expedita fusce temporibus est odit mi quos.
-                    Aliquid sempero.
+                    Are you an individual? Government agency or private sector
+                    stakeholder? And want to initiate a draft policy.
                   </p>
                 </div>
               </td>
@@ -191,11 +189,10 @@
                   data-trigger="hover"
                 >
                   <i class="im-server-2 icon circle anima"></i>
-                  <h3>Server configuration</h3>
+                  <h3>FAQ</h3>
                   <p>
-                    Interdum iusto pulvinar consequuntur augue optio repellat
-                    fuga Purus expedita fusce temporibus est odit mi quos.
-                    Aliquid semper veritatis.
+                    For frequently asked questions on our rule making process
+                    please click here.
                   </p>
                 </div>
               </td>
@@ -548,7 +545,7 @@
             </div>
             <div class="col-md-4 footer-right text-left">
               <ul class="ul-squares">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Documents</a></li>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Search</a></li>
