Updated page contents and created login and registration page1

--- a/login.html
+++ b/login.html
@@ -185,6 +185,8 @@
               </div>
             </div>
           </form>
+          <br />
+          <span>Already have an account ? <a href="login.html">LOGIN</a></span>
         </div>
       </div>
     </div>
