Upadted footer section

--- a/index.html
+++ b/index.html
@@ -517,12 +517,17 @@
               </div>
             </div>
             <div class="col-md-4 footer-center text-left">
-              <p>
-                Dolorem urna possimus pretium debitis assumenda, doloribus sem
-                congue molestias itaque ante venenatis sequi exercitation
-                excepteur fusce ultricies explicabo neque! Perpulvinar dictum
-                dapibus.
-              </p>
+              <ul class="fa-ul">
+                <li>
+                  <i class="fa-li im-phone"></i> +234 92 920 263,
+                  +2348168401851, +2340752420189
+                </li>
+                <li><i class="fa-li im-mail"></i> info@nitda.gov.ng</li>
+                <li>
+                  <i class="fa-li im-map"></i>No. 28, Port Harcourt Crescent,
+                  Off Gimbiya Street, P.M.B 564, Area 11 Garki, Abuja, Nigeria.
+                </li>
+              </ul>
               <hr class="space s" />
               <div class="btn-group social-group btn-group-icons">
                 <a target="_blank" href="#" data-social="share-facebook"
