Upadted Services section

--- a/index.html
+++ b/index.html
@@ -210,81 +210,7 @@
     >
       <div class="container content">
         <div class="row">
-          <div class="col-md-4">
-            <h3>Services and solutions</h3>
-            <p>
-              Tincidunt integer eu augue augue nunc elit dolorluctus placerat
-              scelerisque euismod nunc elit dolorluctus iaculis eu lacus nunc mi
-              elito vehicula ut laoreet acaliquam.Lorem ipsum dolor sit amet
-              consectetur adipiscing elitsed do eiusmod tempor incididunto.
-            </p>
-            <hr class="space xs" />
-            <div
-              class="flexslider carousel"
-              data-options="minWidth:50,itemMargin:15,numItems:2,controlNav:false,directionNav:true"
-            >
-              <ul class="slides">
-                <li>
-                  <a
-                    class="img-box thumbnail lightbox"
-                    href="images/gallery/image-5.jpg"
-                    data-lightbox-anima="fade-left"
-                  >
-                    <span>
-                      <img src="images/gallery/image-5.jpg" alt="" />
-                    </span>
-                  </a>
-                </li>
-                <li>
-                  <a
-                    class="img-box thumbnail lightbox"
-                    href="images/gallery/image-6.jpg"
-                    data-lightbox-anima="fade-left"
-                  >
-                    <span>
-                      <img src="images/gallery/image-6.jpg" alt="" />
-                    </span>
-                  </a>
-                </li>
-                <li>
-                  <a
-                    class="img-box thumbnail lightbox"
-                    href="images/gallery/image-7.jpg"
-                    data-lightbox-anima="fade-left"
-                  >
-                    <span>
-                      <img src="images/gallery/image-7.jpg" alt="" />
-                    </span>
-                  </a>
-                </li>
-                <li>
-                  <a
-                    class="img-box thumbnail lightbox"
-                    href="images/gallery/image-8.jpg"
-                    data-lightbox-anima="fade-left"
-                  >
-                    <span>
-                      <img src="images/gallery/image-8.jpg" alt="" />
-                    </span>
-                  </a>
-                </li>
-                <li>
-                  <a
-                    class="img-box thumbnail lightbox"
-                    href="images/gallery/image-9.jpg"
-                    data-lightbox-anima="fade-left"
-                  >
-                    <span>
-                      <img src="images/gallery/image-9.jpg" alt="" />
-                    </span>
-                  </a>
-                </li>
-              </ul>
-            </div>
-            <hr class="space m" />
-            <a href="#" class="nav-jus btn btn-sm">REQUEST A MEETING</a>
-          </div>
-          <div class="col-md-8">
+          <div class="col-md-12">
             <div class="row">
               <div class="col-md-3">
                 <div class="icon-box icon-box-top-bottom counter-box-icon">
@@ -359,53 +285,64 @@
             <hr class="hr-dark" />
             <hr class="space s" />
             <div class="row">
-              <div class="col-md-6">
-                <ul class="fa-ul">
-                  <li>
-                    <i class="fa-li im-check"></i> Fintech solutions for every
-                    business
-                  </li>
-                  <li>
-                    <i class="fa-li im-check"></i> Dedicated support team active
-                    24/7
-                  </li>
-                  <li>
-                    <i class="fa-li im-check"></i> More than 20 years of
-                    experience in fintech
-                  </li>
-                  <li>
-                    <i class="fa-li im-check"></i> Latest software technologies
-                    and big-datas
-                  </li>
-                  <li>
-                    <i class="fa-li im-check"></i> Network of entraprenautes,
-                    influencers and vips
-                  </li>
-                </ul>
-              </div>
-              <div class="col-md-6">
-                <ul class="fa-ul">
-                  <li>
-                    <i class="fa-li im-check"></i> Fintech solutions for every
-                    business
-                  </li>
-                  <li>
-                    <i class="fa-li im-check"></i> Dedicated support team active
-                    24/7
-                  </li>
-                  <li>
-                    <i class="fa-li im-check"></i> More than 20 years of
-                    experience in fintech
-                  </li>
-                  <li>
-                    <i class="fa-li im-check"></i> Latest software technologies
-                    and big-datas
-                  </li>
-                  <li>
-                    <i class="fa-li im-check"></i> Network of entraprenautes,
-                    influencers and vips
-                  </li>
-                </ul>
+              <div
+                style="
+                  display: flex;
+                  align-items: center;
+                  justify-items: center;
+                  justify-content: center;
+                  align-items: center;
+                "
+                class="col-md-12 d-flex flex-column flex-md-row"
+              >
+                <div class="col-md-4">
+                  <ul class="fa-ul">
+                    <li>
+                      <i class="fa-li im-check"></i> Fintech solutions for every
+                      business
+                    </li>
+                    <li>
+                      <i class="fa-li im-check"></i> Dedicated support team
+                      active 24/7
+                    </li>
+                    <li>
+                      <i class="fa-li im-check"></i> More than 20 years of
+                      experience in fintech
+                    </li>
+                    <li>
+                      <i class="fa-li im-check"></i> Latest software
+                      technologies and big-datas
+                    </li>
+                    <li>
+                      <i class="fa-li im-check"></i> Network of entraprenautes,
+                      influencers and vips
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-md-4">
+                  <ul class="fa-ul">
+                    <li>
+                      <i class="fa-li im-check"></i> Fintech solutions for every
+                      business
+                    </li>
+                    <li>
+                      <i class="fa-li im-check"></i> Dedicated support team
+                      active 24/7
+                    </li>
+                    <li>
+                      <i class="fa-li im-check"></i> More than 20 years of
+                      experience in fintech
+                    </li>
+                    <li>
+                      <i class="fa-li im-check"></i> Latest software
+                      technologies and big-datas
+                    </li>
+                    <li>
+                      <i class="fa-li im-check"></i> Network of entraprenautes,
+                      influencers and vips
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
