--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -39,7 +39,7 @@
         background-color: #004d2a !important;
       }
       .sign_In_button:hover {
-        background-color: #009a55 !important;
+        background-color: #1f734d !important;
       }
     </style>
   </head>
@@ -62,75 +62,61 @@
               <form
                 class="form w-100 fv-plugins-bootstrap5 fv-plugins-framework"
                 novalidate="novalidate"
-                id="kt_sign_in_form"
-                data-kt-redirect-url="index.html"
+                id="kt_password_reset_form"
+                data-kt-redirect-url="../../demo1/dist/authentication/layouts/corporate/new-password.html"
                 action="#"
               >
-                <div class="text-center mb-11">
-                  <h1 class="text-dark fw-bolder mb-3">Login</h1>
+                <!--begin::Heading-->
+                <div class="text-center mb-10">
+                  <!--begin::Title-->
+                  <h1 class="text-dark fw-bolder mb-3">Forgot Password ?</h1>
+                  <!--end::Title-->
+                  <!--begin::Link-->
+                  <div class="text-gray-500 fw-semibold fs-6">
+                    Enter your email to reset your password.
+                  </div>
+                  <!--end::Link-->
                 </div>
-
-                <div class="fv-row mb-8 fv-plugins-icon-container py-5">
+                <!--begin::Heading-->
+                <!--begin::Input group=-->
+                <div class="fv-row mb-8 fv-plugins-icon-container">
+                  <!--begin::Email-->
                   <input
                     type="text"
                     placeholder="Email"
                     name="email"
                     autocomplete="off"
-                    class="form-control bg-transparent"
+                    class="form-control h-auto"
                   />
+                  <!--end::Email-->
                   <div
                     class="fv-plugins-message-container invalid-feedback"
                   ></div>
                 </div>
-                <div class="fv-row mb-3 fv-plugins-icon-container">
-                  <input
-                    type="password"
-                    placeholder="Password"
-                    name="password"
-                    autocomplete="off"
-                    class="form-control bg-transparent"
-                  />
-                  <div
-                    class="fv-plugins-message-container invalid-feedback"
-                  ></div>
-                </div>
-                <div
-                  class="d-flex flex-stack flex-wrap gap-3 fs-base fw-semibold mb-8"
-                >
-                  <div></div>
-                  <a
-                    href="forgotPassword.html"
-                    style="color: #004d2a; font-weight: 600"
-                    >Forgot Password ?</a
-                  >
-                </div>
-                <div class="d-grid mb-10">
+
+                <!--begin::Actions-->
+                <div class="d-flex flex-wrap justify-content-center pb-lg-0">
                   <button
-                    type="submit"
-                    id="kt_sign_in_submit"
-                    class="sign_In_button"
+                    type="button"
+                    id="kt_password_reset_submit"
+                    class="sign_In_button me-4"
+                    style="background-color: #004d2a; font-weight: 700"
                   >
-                    <span class="indicator-label">Sign In</span>
+                    <!--begin::Indicator label-->
+                    <span class="indicator-label">Submit</span>
+                    <!--end::Indicator label-->
+                    <!--begin::Indicator progress-->
                     <span class="indicator-progress"
                       >Please wait...
                       <span
                         class="spinner-border spinner-border-sm align-middle ms-2"
                       ></span
                     ></span>
+                    <!--end::Indicator progress-->
                   </button>
+                  <a href="login.html" class="btn btn-light">Cancel</a>
                 </div>
-                <div
-                  style="color: #004d2a; font-weight: 600"
-                  class="text-gray-500 text-center fw-semibold fs-6"
-                >
-                  Not a Member yet?
-                  <a
-                    href="register.html"
-                    class=""
-                    style="color: #004d2a; font-weight: 700"
-                    >Sign up</a
-                  >
-                </div>
+                <!--end::Actions-->
               </form>
             </div>
           </div>
