Fixed index body

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                   data-trigger="hover"
                 >
                   <i class="im-diploma-2 icon circle anima"></i>
-                  <h3>Business consulting</h3>
+                  <h3>Draft Rule</h3>
                   <p>
                     Do you want to submit or review a request for the draft of a
                     rule
