Updated login and forgot password flow

--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -140,6 +140,10 @@
               src="assets/images/cropped-cropped-NITDA-Logo-new-03.png"
               alt=""
             />
+            <h3 style="color: #004d2a; font-size: 26px; text-align: center">
+              National Information Technology Development Agency (NITDA) Policy
+              review portal
+            </h3>
           </div>
         </div>
       </div>
