Made register page responsive

--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -52,8 +52,14 @@
           class="d-flex flex-column flex-lg-row-fluid w-lg-50 p-10 order-2 order-lg-1"
         >
           <div class="w-lg-700px d-flex flex-stack px-10 mx-auto">
-            <div class="d-flex fw-semibold text-primary fs-base gap-5">
-              <a href="index.html" class="fw-bold" target="_blank">Back Home</a>
+            <div class="d-flex fw-semibold fs-base gap-5">
+              <a
+                href="index.html"
+                class="fw-bold"
+                style="color: #00733e; font-size: 16px"
+                target="_blank"
+                >Back Home</a
+              >
             </div>
           </div>
 
@@ -122,9 +128,24 @@
           </div>
           <div class="w-lg-500px d-flex flex-stack px-10 mx-auto">
             <div class="d-flex fw-semibold text-primary fs-base gap-5">
-              <a href="#" target="_blank">Terms</a>
-              <a href="#" target="_blank">Plans</a>
-              <a href="#" target="_blank">Contact Us</a>
+              <a
+                href="#"
+                style="color: #00733e; font-weight: 500"
+                target="_blank"
+                >Terms</a
+              >
+              <a
+                href="#"
+                style="color: #00733e; font-weight: 500"
+                target="_blank"
+                >Plans</a
+              >
+              <a
+                href="#"
+                style="color: #00733e; font-weight: 500"
+                target="_blank"
+                >Contact Us</a
+              >
             </div>
           </div>
         </div>
@@ -140,6 +161,7 @@
               src="assets/images/cropped-cropped-NITDA-Logo-new-03.png"
               alt=""
             />
+
             <h3 style="color: #004d2a; font-size: 26px; text-align: center">
               National Information Technology Development Agency (NITDA) Policy
               review portal
