--- a/login.html
+++ b/login.html
@@ -53,7 +53,14 @@
         >
           <div class="w-lg-700px d-flex flex-stack px-10 mx-auto">
             <div class="d-flex fw-semibold text-primary fs-base gap-5">
-              <a href="index.html" class="fw-bold" target="_blank">Back Home</a>
+              <a
+                href="index.html"
+                class="fw-bold"
+                target="_blank"
+                style="color: #00733e; font-size: 16px"
+                target="_blank"
+                >Back Home</a
+              >
             </div>
           </div>
 
@@ -134,12 +141,16 @@
               </form>
             </div>
           </div>
-          <div class="w-lg-500px d-flex flex-stack px-10 mx-auto">
-            <div class="d-flex fw-semibold text-primary fs-base gap-5">
-              <a href="#" target="_blank">Terms</a>
-              <a href="#" target="_blank">Plans</a>
-              <a href="#" target="_blank">Contact Us</a>
-            </div>
+          <div class="d-flex fw-semibold text-primary fs-base gap-5">
+            <a href="#" style="color: #00733e; font-weight: 500" target="_blank"
+              >Terms</a
+            >
+            <a href="#" style="color: #00733e; font-weight: 500" target="_blank"
+              >Plans</a
+            >
+            <a href="#" style="color: #00733e; font-weight: 500" target="_blank"
+              >Contact Us</a
+            >
           </div>
         </div>
         <div
@@ -154,7 +165,7 @@
               src="assets/images/cropped-cropped-NITDA-Logo-new-03.png"
               alt=""
             />
-             <h3 style="color: #004d2a; font-size: 26px; text-align: center">
+            <h3 style="color: #004d2a; font-size: 26px; text-align: center">
               National Information Technology Development Agency (NITDA) Policy
               review portal
             </h3>
