--- a/register.html
+++ b/register.html
@@ -52,25 +52,31 @@
           class="d-flex flex-column flex-lg-row-fluid w-lg-50 p-10 order-2 order-lg-1"
         >
           <div class="w-lg-700px d-flex flex-stack px-10 mx-auto">
-            <div class="d-flex fw-semibold text-primary fs-base gap-5">
-              <a href="index.html" class="fw-bold" target="_blank">Back Home</a>
+            <div class="d-flex fw-semibold text-primary fs-base gap-1">
+              <a
+                href="index.html"
+                class="fw-bold"
+                style="color: #00733e; font-size: 16px"
+                target="_blank"
+                >Back Home</a
+              >
             </div>
           </div>
           <div class="d-flex flex-center flex-column flex-lg-row-fluid">
-            <div class="w-lg-700px p-10">
-              <form
-                class="form w-100 fv-plugins-bootstrap5 fv-plugins-framework"
-                novalidate="novalidate"
-                id="kt_sign_up_form"
-                data-kt-redirect-url="../../demo1/dist/authentication/layouts/corporate/sign-in.html"
-                action="#"
-              >
-                <div class="text-center">
-                  <h1 class="text-dark fw-bolder mb-3">Sign Up</h1>
-                </div>
+            <form
+              class="form d-flex flex-column w-100 fv-plugins-bootstrap5 fv-plugins-framework px-lg-10 px-1"
+              novalidate="novalidate"
+              id="kt_sign_up_form"
+              data-kt-redirect-url="../../demo1/dist/authentication/layouts/corporate/sign-in.html"
+              action="#"
+            >
+              <div class="text-center">
+                <h1 class="text-dark fw-bolder mb-3 mt-3 mb-3">Sign Up</h1>
+              </div>
 
-                <div class="d-flex gap-5 gap-5">
-                  <div class="col-6 mb-8 fv-plugins-icon-container">
+              <div class="col-12 mb-md-5">
+                <div class="d-flex flex-md-row flex-column gap-1">
+                  <div class="col-12 col-md-6 fv-plugins-icon-container">
                     <input
                       type="text"
                       placeholder="Full name"
@@ -82,7 +88,8 @@
                       class="fv-plugins-message-container invalid-feedback"
                     ></div>
                   </div>
-                  <div class="col-6 mb-8 fv-plugins-icon-container">
+
+                  <div class="col-12 col-md-6 fv-plugins-icon-container">
                     <input
                       type="text"
                       placeholder="Email"
@@ -95,9 +102,12 @@
                     ></div>
                   </div>
                 </div>
-                <div class="d-flex gap-5">
+              </div>
+
+              <div class="col-12 mb-md-5">
+                <div class="d-flex flex-md-row flex-column gap-1">
                   <div
-                    class="col-6 mb-8 fv-plugins-icon-container"
+                    class="col-12 col-md-6 fv-plugins-icon-container"
                     data-kt-password-meter="true"
                   >
                     <input
@@ -111,7 +121,8 @@
                       class="fv-plugins-message-container invalid-feedback"
                     ></div>
                   </div>
-                  <div class="col-6 mb-8 fv-plugins-icon-container">
+
+                  <div class="col-12 col-md-6 fv-plugins-icon-container">
                     <input
                       placeholder="Confirm Password"
                       name="confirm-password"
@@ -124,8 +135,11 @@
                     ></div>
                   </div>
                 </div>
-                <div class="d-flex gap-5">
-                  <div class="col-6 mb-8 fv-plugins-icon-container">
+              </div>
+
+              <div class="col-12 mb-md-5">
+                <div class="d-flex flex-column flex-md-row gap-1">
+                  <div class="col-12 col-md-6 fv-plugins-icon-container">
                     <input
                       type="text"
                       placeholder="Organization Name"
@@ -137,7 +151,7 @@
                       class="fv-plugins-message-container invalid-feedback"
                     ></div>
                   </div>
-                  <div class="col-6 mb-8 fv-plugins-icon-container">
+                  <div class="col-12 col-md-6 fv-plugins-icon-container">
                     <input
                       type="text"
                       placeholder="Job title"
@@ -150,9 +164,11 @@
                     ></div>
                   </div>
                 </div>
+              </div>
 
-                <div class="d-flex gap-5">
-                  <div class="col-6 mb-8 fv-plugins-icon-container">
+              <div class="col-12 mb-md-5">
+                <div class="d-flex flex-column flex-md-row gap-1">
+                  <div class="col-12 col-md-6 fv-plugins-icon-container">
                     <select
                       name="industry"
                       id="industry"
@@ -177,7 +193,7 @@
                       class="fv-plugins-message-container invalid-feedback"
                     ></div>
                   </div>
-                  <div class="col-6 mb-8 fv-plugins-icon-container">
+                  <div class="col-12 col-md-6 fv-plugins-icon-container">
                     <select
                       name="organizationSize"
                       id="organizationSize"
@@ -203,8 +219,11 @@
                     ></div>
                   </div>
                 </div>
-                <div class="d-flex gap-5">
-                  <div class="col-6 mb-8 fv-plugins-icon-container">
+              </div>
+
+              <div class="col-12 mb-md-5">
+                <div class="d-flex flex-column flex-md-row gap-1">
+                  <div class="col-12 col-md-6 fv-plugins-icon-container">
                     <select
                       name="yourLocation"
                       id="yourLocation"
@@ -229,7 +248,7 @@
                       class="fv-plugins-message-container invalid-feedback"
                     ></div>
                   </div>
-                  <div class="col-6 mb-8 fv-plugins-icon-container">
+                  <div class="col-12 col-md-6 fv-plugins-icon-container">
                     <select
                       name="gender"
                       id="gender"
@@ -245,8 +264,11 @@
                     ></div>
                   </div>
                 </div>
-                <div class="d-flex gap-5">
-                  <div class="col-6 mb-8 fv-plugins-icon-container">
+              </div>
+
+              <div class="col-12 mb-md-5">
+                <div class="d-flex flex-column flex-md-row gap-1">
+                  <div class="col-12 col-md-6 fv-plugins-icon-container">
                     <input
                       type="text"
                       placeholder="Your age"
@@ -258,7 +280,7 @@
                       class="fv-plugins-message-container invalid-feedback"
                     ></div>
                   </div>
-                  <div class="col-6 mb-8 fv-plugins-icon-container">
+                  <div class="col-12 col-md-6 fv-plugins-icon-container">
                     <input
                       type="text"
                       placeholder="Your occupation"
@@ -271,58 +293,59 @@
                     ></div>
                   </div>
                 </div>
-                <div class="d-flex">
-                  <div
-                    class="fv-row mb-8 fv-plugins-icon-container fv-plugins-bootstrap5-row-valid"
-                  >
-                    <label class="form-check form-check-inline">
-                      <input
-                        class="form-check-input"
-                        type="checkbox"
-                        name="toc"
-                        value="1"
-                        style="background-color: #004e2b"
-                      />
-                      <span
-                        class="form-check-label fw-semibold text-gray-700 fs-base ms-1 fw-bold"
-                        >I Accept the to the
-                        <a href="#" class="ms-1 link-primary">Policy</a></span
-                      >
-                    </label>
-                    <div
-                      class="fv-plugins-message-container invalid-feedback"
-                    ></div>
-                  </div>
-                </div>
-                <div class="d-grid mb-10">
-                  <button
-                    type="submit"
-                    id="kt_sign_in_submit"
-                    class="sign_In_button"
-                  >
-                    <span class="indicator-label">Sign Up</span>
-                    <span class="indicator-progress"
-                      >Please wait...
-                      <span
-                        class="spinner-border spinner-border-sm align-middle ms-2"
-                      ></span
-                    ></span>
-                  </button>
-                </div>
+              </div>
+
+              <div class="d-flex flex-column col-sm-12">
                 <div
-                  style="color: #004d2a; font-weight: 600"
-                  class="text-gray-500 text-center fw-semibold fs-6"
+                  class="fv-row fv-plugins-icon-container fv-plugins-bootstrap5-row-valid"
                 >
-                  Already have an sccount?
-                  <a
-                    href="login.html"
-                    class=""
-                    style="color: #004d2a; font-weight: 700"
-                    >Sign in</a
-                  >
+                  <label class="form-check form-check-inline">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      name="toc"
+                      value="1"
+                      style="background-color: #004e2b"
+                    />
+                    <span
+                      class="form-check-label fw-semibold text-gray-700 fs-base ms-1 fw-bold"
+                      >I Accept the to the
+                      <a href="#" class="ms-1 link-primary">Policy</a></span
+                    >
+                  </label>
+                  <div
+                    class="fv-plugins-message-container invalid-feedback"
+                  ></div>
                 </div>
-              </form>
-            </div>
+              </div>
+              <div class="d-grid mb-10">
+                <button
+                  type="submit"
+                  id="kt_sign_in_submit"
+                  class="sign_In_button"
+                >
+                  <span class="indicator-label">Sign Up</span>
+                  <span class="indicator-progress"
+                    >Please wait...
+                    <span
+                      class="spinner-border spinner-border-sm align-middle ms-2"
+                    ></span
+                  ></span>
+                </button>
+              </div>
+              <div
+                style="color: #004d2a; font-weight: 600"
+                class="text-gray-500 text-center fw-semibold fs-6"
+              >
+                Already have an sccount?
+                <a
+                  href="login.html"
+                  class=""
+                  style="color: #004d2a; font-weight: 700"
+                  >Sign in</a
+                >
+              </div>
+            </form>
           </div>
         </div>
         <div
@@ -334,6 +357,11 @@
           >
             <img
               class="d-none d-lg-block mx-auto w-275px w-md-50 w-xl-500px mb-10 mb-lg-20"
+              src="assets/images/cropped-cropped-NITDA-Logo-new-03.png"
+              alt=""
+            />
+            <img
+              class="d-lg-none d-lg-block mx-auto w-150px w-md-50 w-xl-500px mb-10 mb-lg-20"
               src="assets/images/cropped-cropped-NITDA-Logo-new-03.png"
               alt=""
             />
