Made login and forgot password page responsive

--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -127,7 +127,9 @@
             </div>
           </div>
           <div class="w-lg-500px d-flex flex-stack px-10 mx-auto">
-            <div class="d-flex fw-semibold text-primary fs-base gap-5">
+            <div
+              class="d-flex fixed-bottom px-3 py-4 fw-semibold text-primary fs-base gap-5 absolute"
+            >
               <a
                 href="#"
                 style="color: #00733e; font-weight: 500"
