--- a/register.html
+++ b/register.html
@@ -71,7 +71,7 @@
               action="#"
             >
               <div class="text-center">
-                <h1 class="text-dark fw-bolder mb-3 mt-3 mb-3">Sign Up</h1>
+                <h1 class="text-dark fw-bolder mb-3 mt-3 mb-10">Sign Up</h1>
               </div>
 
               <div class="col-12 mb-md-5">
@@ -337,7 +337,7 @@
                 style="color: #004d2a; font-weight: 600"
                 class="text-gray-500 text-center fw-semibold fs-6"
               >
-                Already have an sccount?
+                Already have an account?
                 <a
                   href="login.html"
                   class=""
