Modified the landing page

--- a/index.html
+++ b/index.html
@@ -151,55 +151,56 @@
       </div>
     </div>
     <div class="section-empty">
-      <div class="container content">
-        <table class="grid-table border-table">
-          <tbody>
-            <tr>
-              <td>
-                <div
-                  class="advs-box advs-box-top-icon"
-                  data-anima="pulse-fast"
-                  data-trigger="hover"
-                >
-                  <i class="im-diploma-2 icon circle anima"></i>
-                  <h3>Draft Rule</h3>
-                  <p>
-                    Do you want to submit or review a request for the draft of a
-                    rule
-                  </p>
-                </div>
-              </td>
-              <td>
-                <div
-                  class="advs-box advs-box-top-icon"
-                  data-anima="pulse-fast"
-                  data-trigger="hover"
-                >
-                  <i class="im-paint-brush icon circle anima"></i>
-                  <h3>Policy</h3>
-                  <p>
-                    Are you an individual? Government agency or private sector
-                    stakeholder? And want to initiate a draft policy.
-                  </p>
-                </div>
-              </td>
-              <td>
-                <div
-                  class="advs-box advs-box-top-icon"
-                  data-anima="pulse-fast"
-                  data-trigger="hover"
-                >
-                  <i class="im-server-2 icon circle anima"></i>
-                  <h3>FAQ</h3>
-                  <p>
-                    For frequently asked questions on our rule making process
-                    please click here.
-                  </p>
-                </div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+      <div class="container content pb-0" style="padding-bottom: 0">
+        <div class="d-flex">
+          <div class="col-lg-4 col-12">
+            <div
+              class="advs-box advs-box-top-icon"
+              data-anima="pulse-fast"
+              data-trigger="hover"
+              style="padding: 0 40px"
+            >
+              <i class="im-diploma-2 icon circle anima"></i>
+              <h3>Draft Rule</h3>
+              <p class="">
+                Do you want to submit or review a request for the draft of a
+                rule
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-12 py-3">
+            <div
+              class="advs-box advs-box-top-icon"
+              data-anima="pulse-fast"
+              data-trigger="hover"
+              style="padding: 0 40px"
+            >
+              <i class="im-paint-brush icon circle anima"></i>
+              <h3>Policy</h3>
+              <p>
+                Are you an individual? Government agency or private sector
+                stakeholder? And want to initiate a draft policy.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-12">
+            <div
+              class="advs-box advs-box-top-icon"
+              data-anima="pulse-fast"
+              data-trigger="hover"
+              style="padding: 0 40px"
+            >
+              <i class="im-server-2 icon circle anima"></i>
+              <h3>FAQ</h3>
+              <p>
+                For frequently asked questions on our rule making process please
+                click here.
+              </p>
+            </div>
+          </div>
+        </div>
+        <hr class="space s" />
+        <hr class="hr-dark" />
       </div>
     </div>
     <div
@@ -209,7 +210,7 @@
       data-parallax="scroll"
       data-image-src="images/bg-4.jpg"
     >
-      <div class="container content">
+      <div class="container content pb-0">
         <div class="row">
           <div class="col-md-12">
             <div class="row">
