Made landing page more responsive

--- a/index.html
+++ b/index.html
@@ -286,18 +286,11 @@
             <hr class="space s" />
             <hr class="hr-dark" />
             <hr class="space s" />
-            <div class="row">
+            <div class="d-flex mx-auto">
               <div
-                style="
-                  display: flex;
-                  align-items: center;
-                  justify-items: center;
-                  justify-content: center;
-                  align-items: center;
-                "
-                class="col-md-12 d-flex flex-column flex-md-row"
+                class="col-md-12 px-20 w-md-300px d-flex flex-column justify-content-center align-content-center"
               >
-                <div class="col-md-4">
+                <div class="col-md-6">
                   <ul class="fa-ul">
                     <li>
                       <i class="fa-li im-check"></i> Fintech solutions for every
@@ -321,7 +314,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                   <ul class="fa-ul">
                     <li>
                       <i class="fa-li im-check"></i> Fintech solutions for every
