Updated the logo on the login page

--- a/login.html
+++ b/login.html
@@ -167,6 +167,11 @@
               src="assets/images/cropped-cropped-NITDA-Logo-new-03.png"
               alt=""
             />
+            <img
+              class="d-lg-none d-lg-block mx-auto w-150px w-md-50 w-xl-500px mb-10 mb-lg-20"
+              src="assets/images/cropped-cropped-NITDA-Logo-new-03.png"
+              alt=""
+            />
             <h3 style="color: #004d2a; font-size: 26px; text-align: center">
               National Information Technology Development Agency (NITDA) Policy
               review portal
