Updated the landing page

--- a/index.html
+++ b/index.html
@@ -155,14 +155,13 @@
         <div class="d-flex">
           <div class="col-lg-4 col-12">
             <div
-              class="advs-box advs-box-top-icon"
+              class="advs-box advs-box-top-icon px-10"
               data-anima="pulse-fast"
               data-trigger="hover"
-              style="padding: 0 40px"
             >
               <i class="im-diploma-2 icon circle anima"></i>
               <h3>Draft Rule</h3>
-              <p class="">
+              <p class="" style="width: 300px">
                 Do you want to submit or review a request for the draft of a
                 rule
               </p>
@@ -177,7 +176,7 @@
             >
               <i class="im-paint-brush icon circle anima"></i>
               <h3>Policy</h3>
-              <p>
+              <p style="width: 300px">
                 Are you an individual? Government agency or private sector
                 stakeholder? And want to initiate a draft policy.
               </p>
@@ -192,7 +191,7 @@
             >
               <i class="im-server-2 icon circle anima"></i>
               <h3>FAQ</h3>
-              <p>
+              <p style="width: 300px">
                 For frequently asked questions on our rule making process please
                 click here.
               </p>
