Updated the landing page responsive nesss

--- a/index.html
+++ b/index.html
@@ -154,47 +154,53 @@
       <div class="container content pb-0" style="padding-bottom: 0">
         <div class="d-flex">
           <div class="col-lg-4 col-12">
-            <div
-              class="advs-box advs-box-top-icon px-10"
-              data-anima="pulse-fast"
-              data-trigger="hover"
-            >
-              <i class="im-diploma-2 icon circle anima"></i>
-              <h3>Draft Rule</h3>
-              <p class="" style="width: 300px">
-                Do you want to submit or review a request for the draft of a
-                rule
-              </p>
+            <div class="row">
+              <div
+                class="advs-box advs-box-top-icon px-10"
+                data-anima="pulse-fast"
+                data-trigger="hover"
+              >
+                <i class="im-diploma-2 icon circle anima"></i>
+                <h3>Draft Rule</h3>
+                <p class="" style="width: 300px">
+                  Do you want to submit or review a request for the draft of a
+                  rule
+                </p>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-12 py-3">
-            <div
-              class="advs-box advs-box-top-icon"
-              data-anima="pulse-fast"
-              data-trigger="hover"
-              style="padding: 0 40px"
-            >
-              <i class="im-paint-brush icon circle anima"></i>
-              <h3>Policy</h3>
-              <p style="width: 300px">
-                Are you an individual? Government agency or private sector
-                stakeholder? And want to initiate a draft policy.
-              </p>
+            <div class="row">
+              <div
+                class="advs-box advs-box-top-icon"
+                data-anima="pulse-fast"
+                data-trigger="hover"
+                style="padding: 0 40px"
+              >
+                <i class="im-paint-brush icon circle anima"></i>
+                <h3>Policy</h3>
+                <p style="width: 300px">
+                  Are you an individual? Government agency or private sector
+                  stakeholder? And want to initiate a draft policy.
+                </p>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-12">
-            <div
-              class="advs-box advs-box-top-icon"
-              data-anima="pulse-fast"
-              data-trigger="hover"
-              style="padding: 0 40px"
-            >
-              <i class="im-server-2 icon circle anima"></i>
-              <h3>FAQ</h3>
-              <p style="width: 300px">
-                For frequently asked questions on our rule making process please
-                click here.
-              </p>
+            <div class="row">
+              <div
+                class="advs-box advs-box-top-icon"
+                data-anima="pulse-fast"
+                data-trigger="hover"
+                style="padding: 0 40px"
+              >
+                <i class="im-server-2 icon circle anima"></i>
+                <h3>FAQ</h3>
+                <p style="width: 300px">
+                  For frequently asked questions on our rule making process
+                  please click here.
+                </p>
+              </div>
             </div>
           </div>
         </div>
