Added landing banner

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       data-natural-height="980"
       data-natural-width="1520"
       data-parallax="scroll"
-      data-image-src="assets/images/pexels-andrea-piacquadio-3931640.jpg"
+      data-image-src="assets/images/banner.jpg"
       style="background-position: center; background-size: cover"
     >
       <div class="container content box-middle">
@@ -434,6 +434,7 @@
         </div>
       </div>
     </div>
+
     <i class="scroll-top scroll-top-mobile fa fa-sort-asc"></i>
     <footer class="footer-base">
       <div class="content">
